# pocket-gambler

./: README.md
case/: pocket-gambler-battery-door.scad  pocket-gambler-body.scad  pocket-gambler-lid.scad  print-settings.md
docs/: assembly-guide.md  contributing.md  getting-started.md
firmware/: CMakeLists.txt  pico_sdk_import.cmake
firmware/src/: main.c
firmware/src/audio/: buzzer.c  buzzer.h
firmware/src/cards/: cards.c  cards.h
firmware/src/display/: ssd1306.c  ssd1306.h  ui.c  ui.h
firmware/src/games/: blackjack.c  blackjack.h  holdem.c  holdem.h  poker.c  poker.h
firmware/src/input/: buttons.c  buttons.h
firmware/src/power/: power.c  power.h
hardware/: bom.csv  wiring-guide.md
hardware/schematic/: schematic.txt
simulator/: pocket_gambler.py
